# triton-pascal-installer

./: README.md  pyproject.toml
.github/workflows/: publish.yml
triton_pascal_installer/: transient.py
